# Little-CMS

./: CMakeLists.txt
include/: lcms2.h
plugins/fast_float/: CMakeLists.txt
src/: CMakeLists.txt
testbed/: CMakeLists.txt  zoo_icc.c
utils/: CMakeLists.txt
